# flutter_calculator

./: .gitignore  README.md  justfile  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/RunnerTests/: RunnerTests.swift
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
