[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
rcalc = { path = "/Users/dagehoo/code/rust/rcalc_bigdecimal" }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_json = "1.0.105"
